dapr-distributed-calendar/kubecost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecost-ingress
  namespace: kubecost
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /kubecost
            backend:
              service:
                name: kubecost-cost-analyzer
                port:
                  number: 9090
